# blog

./: .gitignore  .repo2llm  CNAME  Justfile  README.md  archives.html  authors.html  building-a-magical-stock-market-orb.html  categories.html  first-post.html  index.html  pelicanconf.py  publishconf.py  pyproject.toml  repo2llm.html  tags.html  test-post.html  tree-based-conversations-with-llms.html  using-zwift-with-a-peloton.html  uv-package-manager.html
author/: forest-dussault.html
category/: general.html  software.html
content/: 01-first-post.md  02-using-zwift-with-a-peloton.md  03-repo2llm.md  04-stock-market-orb.md  05-tree-based-conversations-with-llms.md  06-uv-package-manager.md  first-post.md
feeds/: all.atom.xml  general.atom.xml  software.atom.xml
tag/: android.html  blogging.html  cursor.html  first.html  pelican.html  peloton.html  python.html  smartspin2k.html  uv.html  zwift.html
theme/css/: custom.css
theme/js/: image-captions.js
themes/cid/static/css/: custom.css
themes/cid/static/js/: dna-helix.js
themes/cid/templates/: base.html  email.html  footer.html  index.html  landing.html
