[project]
name = "blog"
version = "0.1.0"
description = "Forest's blog"
requires-python = ">=3.12"
dependencies = [
    "pelican",
    "markdown",
    "ghp-import",
    "pygments",
    "python-slugify",
]

[project.optional-dependencies]
dev = [
    "black",
    "isort",
    "pylint",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.isort]
profile = "black"
line_length = 88

[tool.pylint]
max-line-length = 88